--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web to EXE</title>
-</head>
-<body>
+{% extends "wrapper.html" %}
+
+{% block main %}
     {% with messages = get_flashed_messages() %}
     {% if messages %}
     <ul class=flashes>
@@ -20,5 +14,4 @@
         <input type="file" name="file">
         <input type="submit">
     </form>
-</body>
-</html>
+{% endblock %}
