--- a/templates/processing.html
+++ b/templates/processing.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web to EXE: Processing</title>
-</head>
-<body>
+{% extends "wrapper.html" %}
+
+{% block main %}
     <h1>Processing</h1>
-</body>
-</html>
+{% endblock %}
