--- a/templates/error.html
+++ b/templates/error.html
@@ -1,5 +1,10 @@
 {% extends "wrapper.html" %}
 
 {% block main %}
-    <h1>Error</h1>
+    <div class="container">
+        <div class="row text-center">
+            <h1>Error</h1>
+            <p>Something broke. Make sure your file is valid and try again.</p>
+        </div>
+    </div>
 {% endblock %}
